# waveform-inversion

./: .gitignore  .pre-commit-config.yaml  README.md  eda.py  pyproject.toml  requirements.txt
src/waveform_inversion/: __init__.py  __main__.py  utils.py
src/waveform_inversion/data/: __init__.py  seismic_dataset.py  test_dataset.py  utils.py
src/waveform_inversion/eda/: __init__.py  plots.py
src/waveform_inversion/models/: __init__.py  dumb_net.py  train.py
