[project]
name = "waveform-inversion"
dynamic = ["version"]
description = "Physics-guided machine learning models to solve full-waveform inversion problems"
readme = "README.md"
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "kaggle>=1.7.4.2",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

[project.scripts]
hello = "waveform_inversion:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/waveform_inversion/__about__.py"
