[project]
name = "waveform-inversion"
dynamic = ["version"]
description = "Physics-guided machine learning models to solve full-waveform inversion problems"
readme = "README.md"
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "dotenv>=0.9.9",
    "kaggle>=1.7.4.2",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
    "typing-extensions>=4.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/waveform_inversion/__about__.py"

[tool.ruff]
target-version = "py310"
line-length = 121

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = true

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10
